# tvm

./: .envrc  .gitignore  CMakeLists.txt  IMCFLOW_QCONV_INPUT_MODIFICATION_GUIDE.md  build.sh  config_cmake.sh  install.sh
.github/: copilot-instructions.md
cmake/modules/contrib/: imcflow.cmake
include/tvm/ir/: attrs.h
include/tvm/relax/: expr.h
include/tvm/relay/: function.h  vta_get_started.ipynb
include/tvm/relay/attrs/: bitserial.h  nn.h  transform.h
include/tvm/relay/qnn/: attrs.h
include/tvm/runtime/: data_type.h
python/tvm/contrib/: imcflow.py
python/tvm/contrib/relay_viz/: interface.py
python/tvm/relay/op/: _transform.py  op_attrs.py  transform.py
python/tvm/relay/op/contrib/: imcflow.py
python/tvm/topi/: __init__.py
python/tvm/topi/generic/: nn.py
python/tvm/topi/imcflow/: __init__.py  fused_batch_norm.py  imcflow_min_max_quantize.py  imcflow_nu_quantize.py  imcflow_packing.py  imcflow_packing_test.py  imcflow_unpacking.py  imcflow_unpacking_test.py  qconv.py
python/tvm/topi/nn/: __init__.py  bitserial_util.py
src/relay/backend/: build_module.cc
src/relay/op/: op_common.h
src/relay/op/nn/: bitserial.cc  convolution.cc  convolution_make.h  nn.cc
src/relay/op/tensor/: binary.cc  transform.cc
src/relay/qnn/op/: quantize.cc
src/relay/transforms/: pattern_utils.h  type_infer.cc
src/runtime/contrib/imcflow/: imcflow.cc  imcflow_kernel.h
tvm_practice/: .envrc  .gitignore  test.py  test_basic_classes.py  test_crt.py  test_dnnl.py  test_dnnl_csrc.py  test_imcflow.py  test_irmodule.py  test_relay_node.py  test_vta.py
tvm_practice/models/: __init__.py  checkpoint.pth.tar  deep_autoencoder.py  deep_autoencoder_imcflow.py  ds_cnn.py  ds_cnn_imcflow.py  mobilenet.py  mobilenet_imcflow.py  model_best.pth.tar  model_best_old.pth.tar  real_model.py  real_model2.py  real_model_no_quant.py  real_model_pretrained_weight.py  relay_models.ipynb  resnet.py  resnet8_cifar.py  safe_convert.py  small_model.py  test.ipynb  test_models.py  utils.py  wide_model.py
tvm_practice/models/reference_from_CIM/: IMPLEMENTATION_NOTES.md  deploy_modules.py  inference.py
tvm_practice/test_codegen/: .envrc  build.sh  imcflow.json  inode_codegen.cc  inode_codegen.h  main.cc
tvm_practice/test_codegen/device/: .gitignore  Makefile  device_codegen.cc  device_codegen.h  inode_codegen.h  main.cc
tvm_practice/test_codegen/host/: Makefile  main.cc
tvm_practice/test_codegen/inode/: .gitignore  Makefile  inode_codegen.cc  relu.cpp
tvm_practice/test_dnnl/: .gitignore  Makefile  build.py  cpp_aot_deploy.cpp  cpp_graph_deploy.cpp
tvm_practice/test_graph/: .gitignore  Makefile  build.py  build_arm.py  build_m3.py  compare_libs.sh  lib_graph_system-lib.tar
tvm_practice/test_graph/arm_cmake/: CMakeLists.txt  README.md  arm_runner.c
tvm_practice/test_graph/arm_cmake/cmake/: arm-cortex-a53.cmake  arm-cortex-m3.cmake  config_a53.cmake  config_cm3.cmake
tvm_practice/test_graph/arm_cmake/crt_config/: crt_config.h
tvm_practice/test_graph/m3_cmake/: CMakeLists.txt
tvm_practice/test_graph/m3_cmake/cmake/: arm-cortex-m3.cmake  config_cm3.cmake  config_host.cmake
tvm_practice/test_imcflow/: test_conv_split_pass.py  test_pass_infra.py
tvm_practice/test_imcflow/all/: .gitignore  log.txt  test.py
tvm_practice/test_imcflow/all/small_model/: after_byoc_model.txt
tvm_practice/test_imcflow/codegen/: .gitignore  GLOBALVAR_CHECKED_TYPE_UPDATE.md  INFERTYPE_LOCAL_FINDINGS.md  IRMODULE_DELITEM_USAGE.md  IRMODULE_REMOVE_FUNCTIONS.md  LOCAL_FUNCTION_UPDATE.md  README.md  debug_level.sh  main.c  run_with_tvmc.py  sh  test.py  test.sh  test_functype_explain.py  test_globalvar_explain.py  test_globalvar_simple.py  test_globalvar_update.py  test_infertype.py  test_infertype_local.py  test_local_function_update.py  test_makeQNN.py  test_module_delitem.py  test_tgi_checked_type.py  tvmgen_default_imcflow_main_4_imce.cpp
tvm_practice/test_imcflow/codegen/arm_cmake/: CMakeLists.txt  arm_runner.c  main.c
tvm_practice/test_imcflow/codegen/arm_cmake/cmake/: arm-cortex-a53.cmake  config_a53.cmake  config_host.cmake  config_imcflow_a53.cmake  config_imcflow_relu_a53.cmake
tvm_practice/test_imcflow/codegen/utils/: dis_inode_int_inst.py  run_device_codegen.py
tvm_practice/test_imcflow/constant_insert/: test.py
tvm_practice/test_imcflow/conv_split/: .envrc  test.py  test_conv_split_pass.py
tvm_practice/test_imcflow/custom_op/: BITPACK_IMPLEMENTATION_SUMMARY.md  bitpack_analysis.py  channel_bitpack_transform.py  log.txt  test.py  test_bitpack_comprehensive.py  test_bitpack_extended.py  test_bitpack_simple.py  test_bitunpack_basic.py  test_channel_bitpack.py  test_layout_transform.py  test_msb_lsb.py  test_relay_bitpack.py  test_relay_bitpack_build.py
tvm_practice/test_imcflow/dense_to_conv/: test.py
tvm_practice/test_imcflow/dense_to_conv/wide_model/: before_model.txt  model.txt
tvm_practice/test_imcflow/graph_partition/: .envrc  .gitignore  test.py
tvm_practice/test_imcflow/imcflow_device_config/: test_device_config.py  test_memory_layout.py
tvm_practice/test_imcflow/int4_test/: test.py
tvm_practice/test_imcflow/int4_test/test_evl/: after_bind.txt  after_clean_region.txt  after_flatten.txt  after_merge_region.txt  origin.txt
tvm_practice/test_imcflow/kernel_invoke/: .envrc  .gitignore  Makefile  test.py
tvm_practice/test_imcflow/make_qnn/: log.txt  test.py
tvm_practice/test_imcflow/make_qnn/make_qnn/: before_model.txt
tvm_practice/test_imcflow/path_pair_make/: test.py  test_function.py
tvm_practice/test_imcflow/pytorch/: .envrc  .gitignore  test.py  test2.py
tvm_practice/test_imcflow/pytorch/origin/: test.txt
tvm_practice/test_imcflow/pytorch/results/: after_annot.txt  after_bind.txt  after_clean_region.txt  after_flatten.txt  after_merge.txt  after_merge_region.txt  after_partition_graph.txt  after_split_concat_partition.txt  origin.txt
tvm_practice/test_imcflow/pytorch/test/: test.txt
tvm_practice/test_micro_tvm/: micro_custom_ide.py
tvm_practice/test_micro_tvm/tutorial/: model.tar
tvm_practice/test_viz/: test_graph_viz.py
(+28 files in other folders)
